<resources>
    <string name="app_name">NewsApiDemo</string>
    <string name="sources">Sources</string>
    <string name="topHeadlines">Top Headlines</string>
    <string name="everything">Everything</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name: %s</string>
    <string name="description">Description: %s</string>
    <string name="category">Category: %s</string>
    <string name="language">Language: %s</string>
    <string name="country">Country: %s</string>
    <string name="author">Author: %s</string>
    <string name="title">Title: %s</string>
    <string name="article_sources">Sources: %s</string>
    <string name="publishedAt">Published At: %s</string>
</resources>
